--- a/.gitignore
+++ b/.gitignore
@@ -1,82 +1,5 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-# Kate
-*.kate-swp
-
-# VSCode
-.vscode/
-
-# Jupyter
-# https://github.com/jupyter/notebook/blob/master/.gitignore
-
-MANIFEST
-build
-dist
-_build
-docs/man/*.gz
-docs/source/api/generated
-docs/source/config.rst
-docs/gh-pages
-notebook/i18n/*/LC_MESSAGES/*.mo
-notebook/i18n/*/LC_MESSAGES/nbjs.json
-notebook/static/components
-notebook/static/style/*.min.css*
-notebook/static/*/js/built/
-notebook/static/*/built/
-notebook/static/built/
-notebook/static/*/js/main.min.js*
-notebook/static/lab/*bundle.js
-node_modules
-*.py[co]
-__pycache__
-*.egg-info
-*~
-*.bak
-.ipynb_checkpoints
-.tox
-.DS_Store
-\#*#
-.#*
-.coverage
-.pytest_cache
-src
-
-*.swp
-*.map
-.idea/
-Read the Docs
-config.rst
-*.iml
-/.project
-/.pydevproject
-
-package-lock.json
-geckodriver.log
-*.iml
-=======
-# VSCode
-# https://github.com/github/gitignore/blob/master/Global/VisualStudioCode.gitignore
-
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
-
-# Local History for Visual Studio Code
-.history/
-
-
-# Kate text editor
-*kate-swap
->>>>>>> coding-challenges/master
-
-# Python
-# https://github.com/github/gitignore/blob/master/Python.gitignore
-
-=======
->>>>>>> daily-programmer/master
+### Python
+### https://github.com/github/gitignore/blob/master/Python.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -87,10 +10,6 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-<<<<<<< HEAD
-=======
-env/
->>>>>>> daily-programmer/master
 build/
 develop-eggs/
 dist/
@@ -102,18 +21,12 @@ lib64/
 parts/
 sdist/
 var/
-<<<<<<< HEAD
 wheels/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
-=======
-*.egg-info/
-.installed.cfg
-*.egg
->>>>>>> daily-programmer/master
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -128,25 +41,17 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
-<<<<<<< HEAD
 .nox/
-=======
->>>>>>> daily-programmer/master
 .coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
-<<<<<<< HEAD
 *.cover
 *.py,cover
 .hypothesis/
 .pytest_cache/
 cover/
-=======
-*,cover
-.hypothesis/
->>>>>>> daily-programmer/master
 
 # Translations
 *.mo
@@ -155,11 +60,8 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-<<<<<<< HEAD
 db.sqlite3
 db.sqlite3-journal
-=======
->>>>>>> daily-programmer/master
 
 # Flask stuff:
 instance/
@@ -172,7 +74,6 @@ instance/
 docs/_build/
 
 # PyBuilder
-<<<<<<< HEAD
 .pybuilder/
 target/
 
@@ -184,28 +85,14 @@ profile_default/
 ipython_config.py
 
 # pyenv
-<<<<<<< HEAD
-#   For a library or package, you might want to ignore these files since the 
-code is
-=======
 #   For a library or package, you might want to ignore these files since the code is
->>>>>>> coding-challenges/master
 #   intended to run in multiple environments; otherwise, check them in:
 # .python-version
 
 # pipenv
-<<<<<<< HEAD
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in 
-version control.
-#   However, in case of collaboration, if having platform-specific dependencies 
-or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't 
-work, or not
-=======
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
 #   having no cross-platform support, pipenv may install dependencies that don't work, or not
->>>>>>> coding-challenges/master
 #   install all needed dependencies.
 #Pipfile.lock
 
@@ -251,46 +138,59 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
-<<<<<<< HEAD
 
-# VSCode 
-# 
-https://github.com/github/gitignore/blob/master/Global/VisualStudioCode.
-gitignore
-
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
-
-# Local History for Visual Studio Code
-.history/
-=======
->>>>>>> coding-challenges/master
-=======
-target/
-
-# IPython Notebook
+### Jupyter
+### https://github.com/jupyter/notebook/blob/master/.gitignore
+MANIFEST
+build
+dist
+_build
+docs/man/*.gz
+docs/source/api/generated
+docs/source/config.rst
+docs/gh-pages
+notebook/i18n/*/LC_MESSAGES/*.mo
+notebook/i18n/*/LC_MESSAGES/nbjs.json
+notebook/static/components
+notebook/static/style/*.min.css*
+notebook/static/*/js/built/
+notebook/static/*/built/
+notebook/static/built/
+notebook/static/*/js/main.min.js*
+notebook/static/lab/*bundle.js
+node_modules
+*.py[co]
+__pycache__
+*.egg-info
+*~
+*.bak
 .ipynb_checkpoints
+.tox
+.DS_Store
+\#*#
+.#*
+.coverage
+.pytest_cache
+src
 
-# pyenv
-.python-version
+*.swp
+*.map
+.idea/
+Read the Docs
+config.rst
+*.iml
+/.project
+/.pydevproject
 
-# celery beat schedule file
-celerybeat-schedule
+package-lock.json
+geckodriver.log
+*.iml
 
-# dotenv
-.env
+# jetbrains IDE stuff
+*.iml
+.idea/
 
-# virtualenv
-venv/
-ENV/
-
-# Spyder project settings
-.spyderproject
-
-# Rope project settings
-.ropeproject
->>>>>>> daily-programmer/master
+# ms IDE stuff
+*.code-workspace
+.history
+.vscode
