--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+### Local files and folder
+ignore/
+# Kate editor
+*.kate-swp
+
+
 ### Python
 ### https://github.com/github/gitignore/blob/master/Python.gitignore
 # Byte-compiled / optimized / DLL files
