--- a/Pipfile
+++ b/Pipfile
@@ -1,16 +1,19 @@
 [[source]]
-name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-
-[dev-packages]
+name = "pypi"
 
 [packages]
-numpy = "*"
 pandas = "*"
+tqdm = "*"
+dataclasses-json = "*"
+numpy = "*"
 matplotlib = "*"
 seaborn = "*"
+pydantic = "*"
+
+[dev-packages]
 pylint = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
