--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
-# Python
-# https://github.com/github/gitignore/blob/master/Python.gitignore
+### Local ###
+ignore/
 
+# Created by https://www.toptal.com/developers/gitignore/api/python,code,kate
+# Edit at https://www.toptal.com/developers/gitignore?templates=python,code,kate
+
+### Code ###
+.vscode/*
+!.vscode/tasks.json
+!.vscode/launch.json
+*.code-workspace
+
+### Kate ###
+# Swap Files #
+.*.kate-swp
+.swp.*
+
+### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -23,6 +38,7 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
@@ -52,7 +68,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
-cover/
+pytestdebug.log
 
 # Translations
 *.mo
@@ -73,9 +89,9 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+doc/_build/
 
 # PyBuilder
-.pybuilder/
 target/
 
 # Jupyter Notebook
@@ -86,9 +102,7 @@ profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -115,6 +129,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+pythonenv*
 
 # Spyder project settings
 .spyderproject
@@ -137,5 +152,7 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
-# Cython debug symbols
-cython_debug/
+# profiling data
+.prof
+
+# End of https://www.toptal.com/developers/gitignore/api/python,code,kate
